--- a/config/database.yml
+++ b/config/database.yml
@@ -14,7 +14,7 @@ development:
   encoding: utf8
   database: digidoc_development
   pool:     5
-  username: digidoc
+  username: Edward
   password:
 
 # I don't think we really need this since we are not doing much testing.
@@ -24,6 +24,6 @@ test:
   encoding: utf8
   database: digidoc_test
   pool:     5
-  username: digidoc
+  username: Edward
   password:
 
